# oas/open-api.json
@@ -355,6 +355,9 @@
           "422": {
             "description": "Unprocessable Entity"
           },
+          "500": {
+            "description": "Internal Server Error"
+          },
           "200 - First Block Response": {
             "description": "",
             "content": {
@@ -871,6 +874,31 @@
             "type": "number",
             "example": 1
           },
+          "providerPublicKey": {
+            "type": "object",
+            "properties": {
+              "kty": {
+                "type": "string",
+                "example": "EC"
+              },
+              "crv": {
+                "type": "string",
+                "example": "P-256"
+              },
+              "x": {
+                "type": "string",
+                "example": "gdt9dxd1Q9p5fn8Pch8tuMf6h4lZ_NtbgeVAddPkk5M"
+              },
+              "y": {
+                "type": "string",
+                "example": "coJR5-TGBUwIV_5YovlWzt4suV0wnxfvWJDvekJBCwQ"
+              },
+              "alg": {
+                "type": "string",
+                "example": "ES256"
+              }
+            }
+          },
           "providerPrivateKey": {
             "type": "object",
             "properties": {
@@ -884,15 +912,15 @@
               },
               "x": {
                 "type": "string",
-                "example": "342tToZrvj64K-0vPuq9B5t8Bx3kjOlVW574Q2vo-zY"
+                "example": "gdt9dxd1Q9p5fn8Pch8tuMf6h4lZ_NtbgeVAddPkk5M"
               },
               "y": {
                 "type": "string",
-                "example": "KtukEk-5ZSvJznoWYl99l6x8CbxbMDYJ7fBbwU8Dnpk"
+                "example": "coJR5-TGBUwIV_5YovlWzt4suV0wnxfvWJDvekJBCwQ"
               },
               "d": {
                 "type": "string",
-                "example": "bF0ufFC_AHEY98HIZnqLdIMp1Hnh-8Y2sglQ15GOp7k"
+                "example": "KeFLl9SKwpJHuAmyyxe7YXiCr4cDGK4uMU1fxnrrLjw"
               },
               "alg": {
                 "type": "string",
@@ -900,90 +928,282 @@
               }
             }
           },
-          "dataExchangeAgreement": {
+          "dataSharingAgreement": {
             "type": "object",
             "properties": {
-              "orig": {
+              "dataOfferingDescription": {
                 "type": "object",
                 "properties": {
-                  "kty": {
+                  "dataOfferingId": {
                     "type": "string",
-                    "example": "EC"
+                    "example": "63b55691f762242150a481d3"
                   },
-                  "crv": {
-                    "type": "string",
-                    "example": "P-256"
+                  "version": {
+                    "type": "number",
+                    "example": 0
                   },
-                  "x": {
+                  "title": {
                     "type": "string",
-                    "example": "342tToZrvj64K-0vPuq9B5t8Bx3kjOlVW574Q2vo-zY"
+                    "example": "Offering Transport"
                   },
-                  "y": {
+                  "category": {
                     "type": "string",
-                    "example": "KtukEk-5ZSvJznoWYl99l6x8CbxbMDYJ7fBbwU8Dnpk"
+                    "example": "transport"
                   },
-                  "alg": {
-                    "type": "string",
-                    "example": "ES256"
+                  "active": {
+                    "type": "boolean",
+                    "example": true
                   }
                 }
               },
-              "dest": {
+              "parties": {
                 "type": "object",
                 "properties": {
-                  "kty": {
+                  "providerDid": {
                     "type": "string",
-                    "example": "EC"
+                    "example": "did:ethr:i3m:0x03437770960595d9d1ccd73c5df15d688b7db8ec96567df000fdfeffa41def675f"
                   },
-                  "crv": {
+                  "consumerDid": {
                     "type": "string",
-                    "example": "P-256"
-                  },
-                  "x": {
-                    "type": "string",
-                    "example": "342tToZrvj64K-0vPuq9B5t8Bx3kjOlVW574Q2vo-zY"
-                  },
-                  "y": {
-                    "type": "string",
-                    "example": "KtukEk-5ZSvJznoWYl99l6x8CbxbMDYJ7fBbwU8Dnpk"
-                  },
-                  "alg": {
-                    "type": "string",
-                    "example": "ES256"
+                    "example": "did:ethr:i3m:0x037e1117d84099a5763f763960f993956dc17aacd2af06cd8a236584a547ec3fe3"
                   }
                 }
               },
-              "encAlg": {
+              "purpose": {
                 "type": "string",
-                "example": "A256GCM"
+                "example": ""
               },
-              "signingAlg": {
-                "type": "string",
-                "example": "ES256"
+              "duration": {
+                "type": "object",
+                "properties": {
+                  "creationDate": {
+                    "type": "number",
+                    "example": 1672824609
+                  },
+                  "startDate": {
+                    "type": "number",
+                    "example": 1672824609
+                  },
+                  "endDate": {
+                    "type": "number",
+                    "example": 1704360609
+                  }
+                }
               },
-              "hashAlg": {
-                "type": "string",
-                "example": "SHA-256"
+              "intendedUse": {
+                "type": "object",
+                "properties": {
+                  "processData": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "shareDataWithThirdParty": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "editData": {
+                    "type": "boolean",
+                    "example": true
+                  }
+                }
               },
-              "ledgerContractAddress": {
-                "type": "string",
-                "example": "0x8d407a1722633bdd1dcf221474be7a44c05d7c2f"
+              "licenseGrant": {
+                "type": "object",
+                "properties": {
+                  "transferable": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "exclusiveness": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "paidUp": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "revocable": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "processing": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "modifying": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "analyzing": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "storingData": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "storingCopy": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "reproducing": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "distributing": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "loaning": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "selling": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "renting": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "furtherLicensing": {
+                    "type": "boolean",
+                    "example": true
+                  },
+                  "leasing": {
+                    "type": "boolean",
+                    "example": true
+                  }
+                }
               },
-              "ledgerSignerAddress": {
-                "type": "string",
-                "example": "0x17bd12C2134AfC1f6E9302a532eFE30C19B9E903"
+              "dataStream": {
+                "type": "boolean",
+                "example": false
               },
-              "pooToPorDelay": {
-                "type": "number",
-                "example": 10000
+              "personalData": {
+                "type": "boolean",
+                "example": false
               },
-              "pooToPopDelay": {
-                "type": "number",
-                "example": 20000
+              "pricingModel": {
+                "type": "object",
+                "properties": {
+                  "paymentType": {
+                    "type": "string",
+                    "example": "one-time purchase"
+                  },
+                  "pricingModelName": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "basicPrice": {
+                    "type": "number",
+                    "example": 0
+                  },
+                  "currency": {
+                    "type": "string",
+                    "example": "EUR"
+                  },
+                  "fee": {
+                    "type": "number",
+                    "example": 0
+                  },
+                  "hasPaymentOnSubscription": {
+                    "type": "object",
+                    "properties": {
+                      "paymentOnSubscriptionName": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "paymentType": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "timeDuration": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "description": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "repeat": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "hasSubscriptionPrice": {
+                        "type": "number",
+                        "example": 0
+                      }
+                    }
+                  },
+                  "hasFreePrice": {
+                    "type": "object",
+                    "properties": {
+                      "hasPriceFree": {
+                        "type": "boolean",
+                        "example": true
+                      }
+                    }
+                  }
+                }
               },
-              "pooToSecretDelay": {
-                "type": "number",
-                "example": 150000
+              "dataExchangeAgreement": {
+                "type": "object",
+                "properties": {
+                  "orig": {
+                    "type": "string",
+                    "example": "{\"alg\":\"ES256\",\"crv\":\"P-256\",\"kty\":\"EC\",\"x\":\"gdt9dxd1Q9p5fn8Pch8tuMf6h4lZ_NtbgeVAddPkk5M\",\"y\":\"coJR5-TGBUwIV_5YovlWzt4suV0wnxfvWJDvekJBCwQ\"}"
+                  },
+                  "dest": {
+                    "type": "string",
+                    "example": "{\"alg\":\"ES256\",\"crv\":\"P-256\",\"kty\":\"EC\",\"x\":\"YI28gvV0utmvjobKned_4m63bc2SkJuKxJBllANfKUc\",\"y\":\"JMKzTxxe4jNcoZYO4D7Xe_nnZtKeZy5z_JmqjoUyLf8\"}"
+                  },
+                  "encAlg": {
+                    "type": "string",
+                    "example": "A128GCM"
+                  },
+                  "signingAlg": {
+                    "type": "string",
+                    "example": "ES256"
+                  },
+                  "hashAlg": {
+                    "type": "string",
+                    "example": "SHA-256"
+                  },
+                  "ledgerContractAddress": {
+                    "type": "string",
+                    "example": "0x8d407A1722633bDD1dcf221474be7a44C05d7c2F"
+                  },
+                  "ledgerSignerAddress": {
+                    "type": "string",
+                    "example": "0xdB0CE68bAbC145B18786C2D820B8CcCc40e1a4f5"
+                  },
+                  "pooToPorDelay": {
+                    "type": "number",
+                    "example": 100000
+                  },
+                  "pooToPopDelay": {
+                    "type": "number",
+                    "example": 30000
+                  },
+                  "pooToSecretDelay": {
+                    "type": "number",
+                    "example": 180000
+                  }
+                }
+              },
+              "signatures": {
+                "type": "object",
+                "properties": {
+                  "providerSignature": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJFUzI1NksiLCJ0eXAiOiJKV1QifQ.eyJkYXRhT2ZmZXJpbmdEZXNjcmlwdGlvbiI6eyJkYXRhT2ZmZXJpbmdJZCI6IjYzYjU1NjkxZjc2MjI0MjE1MGE0ODFkMyIsInZlcnNpb24iOjAsInRpdGxlIjoiT2ZmZXJpbmcgVHJhbnNwb3J0IiwiY2F0ZWdvcnkiOiJ0cmFuc3BvcnQiLCJhY3RpdmUiOnRydWV9LCJwYXJ0aWVzIjp7InByb3ZpZGVyRGlkIjoiZGlkOmV0aHI6aTNtOjB4MDM0Mzc3NzA5NjA1OTVkOWQxY2NkNzNjNWRmMTVkNjg4YjdkYjhlYzk2NTY3ZGYwMDBmZGZlZmZhNDFkZWY2NzVmIiwiY29uc3VtZXJEaWQiOiJkaWQ6ZXRocjppM206MHgwMzdlMTExN2Q4NDA5OWE1NzYzZjc2Mzk2MGY5OTM5NTZkYzE3YWFjZDJhZjA2Y2Q4YTIzNjU4NGE1NDdlYzNmZTMifSwicHVycG9zZSI6IiIsImR1cmF0aW9uIjp7ImNyZWF0aW9uRGF0ZSI6MTY3MjgyNDYwOSwic3RhcnREYXRlIjoxNjcyODI0NjA5LCJlbmREYXRlIjoxNzA0MzYwNjA5fSwiaW50ZW5kZWRVc2UiOnsicHJvY2Vzc0RhdGEiOnRydWUsInNoYXJlRGF0YVdpdGhUaGlyZFBhcnR5Ijp0cnVlLCJlZGl0RGF0YSI6dHJ1ZX0sImxpY2Vuc2VHcmFudCI6eyJ0cmFuc2ZlcmFibGUiOnRydWUsImV4Y2x1c2l2ZW5lc3MiOnRydWUsInBhaWRVcCI6dHJ1ZSwicmV2b2NhYmxlIjp0cnVlLCJwcm9jZXNzaW5nIjp0cnVlLCJtb2RpZnlpbmciOnRydWUsImFuYWx5emluZyI6dHJ1ZSwic3RvcmluZ0RhdGEiOnRydWUsInN0b3JpbmdDb3B5Ijp0cnVlLCJyZXByb2R1Y2luZyI6dHJ1ZSwiZGlzdHJpYnV0aW5nIjp0cnVlLCJsb2FuaW5nIjp0cnVlLCJzZWxsaW5nIjp0cnVlLCJyZW50aW5nIjp0cnVlLCJmdXJ0aGVyTGljZW5zaW5nIjp0cnVlLCJsZWFzaW5nIjp0cnVlfSwiZGF0YVN0cmVhbSI6ZmFsc2UsInBlcnNvbmFsRGF0YSI6ZmFsc2UsInByaWNpbmdNb2RlbCI6eyJwYXltZW50VHlwZSI6Im9uZS10aW1lIHB1cmNoYXNlIiwicHJpY2luZ01vZGVsTmFtZSI6InN0cmluZyIsImJhc2ljUHJpY2UiOjAsImN1cnJlbmN5IjoiRVVSIiwiZmVlIjowLCJoYXNQYXltZW50T25TdWJzY3JpcHRpb24iOnsicGF5bWVudE9uU3Vic2NyaXB0aW9uTmFtZSI6IiIsInBheW1lbnRUeXBlIjoiIiwidGltZUR1cmF0aW9uIjoiIiwiZGVzY3JpcHRpb24iOiIiLCJyZXBlYXQiOiIiLCJoYXNTdWJzY3JpcHRpb25QcmljZSI6MH0sImhhc0ZyZWVQcmljZSI6eyJoYXNQcmljZUZyZWUiOnRydWV9fSwiZGF0YUV4Y2hhbmdlQWdyZWVtZW50Ijp7Im9yaWciOiJ7XCJhbGdcIjpcIkVTMjU2XCIsXCJjcnZcIjpcIlAtMjU2XCIsXCJrdHlcIjpcIkVDXCIsXCJ4XCI6XCJnZHQ5ZHhkMVE5cDVmbjhQY2g4dHVNZjZoNGxaX050YmdlVkFkZFBrazVNXCIsXCJ5XCI6XCJjb0pSNS1UR0JVd0lWXzVZb3ZsV3p0NHN1VjB3bnhmdldKRHZla0pCQ3dRXCJ9IiwiZGVzdCI6IntcImFsZ1wiOlwiRVMyNTZcIixcImNydlwiOlwiUC0yNTZcIixcImt0eVwiOlwiRUNcIixcInhcIjpcIllJMjhndlYwdXRtdmpvYktuZWRfNG02M2JjMlNrSnVLeEpCbGxBTmZLVWNcIixcInlcIjpcIkpNS3pUeHhlNGpOY29aWU80RDdYZV9ublp0S2VaeTV6X0ptcWpvVXlMZjhcIn0iLCJlbmNBbGciOiJBMTI4R0NNIiwic2lnbmluZ0FsZyI6IkVTMjU2IiwiaGFzaEFsZyI6IlNIQS0yNTYiLCJsZWRnZXJDb250cmFjdEFkZHJlc3MiOiIweDhkNDA3QTE3MjI2MzNiREQxZGNmMjIxNDc0YmU3YTQ0QzA1ZDdjMkYiLCJsZWRnZXJTaWduZXJBZGRyZXNzIjoiMHhkQjBDRTY4YkFiQzE0NUIxODc4NkMyRDgyMEI4Q2NDYzQwZTFhNGY1IiwicG9vVG9Qb3JEZWxheSI6MTAwMDAwLCJwb29Ub1BvcERlbGF5IjozMDAwMCwicG9vVG9TZWNyZXREZWxheSI6MTgwMDAwfSwiaXNzIjoiZGlkOmV0aHI6aTNtOjB4MDM0Mzc3NzA5NjA1OTVkOWQxY2NkNzNjNWRmMTVkNjg4YjdkYjhlYzk2NTY3ZGYwMDBmZGZlZmZhNDFkZWY2NzVmIiwiaWF0IjoxNjcyODMyOTAyfQ.lFyYmVy8q9iwN1_I_ThEKCaSiEHVkV21rwl_jRuX9c9khpUwpd7dQtOKvNl_kms-ITd9lQl2aPNuxzliUNHqVQ"
+                  },
+                  "consumerSignature": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJFUzI1NksiLCJ0eXAiOiJKV1QifQ.eyJkYXRhT2ZmZXJpbmdEZXNjcmlwdGlvbiI6eyJkYXRhT2ZmZXJpbmdJZCI6IjYzYjU1NjkxZjc2MjI0MjE1MGE0ODFkMyIsInZlcnNpb24iOjAsInRpdGxlIjoiT2ZmZXJpbmcgVHJhbnNwb3J0IiwiY2F0ZWdvcnkiOiJ0cmFuc3BvcnQiLCJhY3RpdmUiOnRydWV9LCJwYXJ0aWVzIjp7InByb3ZpZGVyRGlkIjoiZGlkOmV0aHI6aTNtOjB4MDM0Mzc3NzA5NjA1OTVkOWQxY2NkNzNjNWRmMTVkNjg4YjdkYjhlYzk2NTY3ZGYwMDBmZGZlZmZhNDFkZWY2NzVmIiwiY29uc3VtZXJEaWQiOiJkaWQ6ZXRocjppM206MHgwMzdlMTExN2Q4NDA5OWE1NzYzZjc2Mzk2MGY5OTM5NTZkYzE3YWFjZDJhZjA2Y2Q4YTIzNjU4NGE1NDdlYzNmZTMifSwicHVycG9zZSI6IiIsImR1cmF0aW9uIjp7ImNyZWF0aW9uRGF0ZSI6MTY3MjgyNDYwOSwic3RhcnREYXRlIjoxNjcyODI0NjA5LCJlbmREYXRlIjoxNzA0MzYwNjA5fSwiaW50ZW5kZWRVc2UiOnsicHJvY2Vzc0RhdGEiOnRydWUsInNoYXJlRGF0YVdpdGhUaGlyZFBhcnR5Ijp0cnVlLCJlZGl0RGF0YSI6dHJ1ZX0sImxpY2Vuc2VHcmFudCI6eyJ0cmFuc2ZlcmFibGUiOnRydWUsImV4Y2x1c2l2ZW5lc3MiOnRydWUsInBhaWRVcCI6dHJ1ZSwicmV2b2NhYmxlIjp0cnVlLCJwcm9jZXNzaW5nIjp0cnVlLCJtb2RpZnlpbmciOnRydWUsImFuYWx5emluZyI6dHJ1ZSwic3RvcmluZ0RhdGEiOnRydWUsInN0b3JpbmdDb3B5Ijp0cnVlLCJyZXByb2R1Y2luZyI6dHJ1ZSwiZGlzdHJpYnV0aW5nIjp0cnVlLCJsb2FuaW5nIjp0cnVlLCJzZWxsaW5nIjp0cnVlLCJyZW50aW5nIjp0cnVlLCJmdXJ0aGVyTGljZW5zaW5nIjp0cnVlLCJsZWFzaW5nIjp0cnVlfSwiZGF0YVN0cmVhbSI6ZmFsc2UsInBlcnNvbmFsRGF0YSI6ZmFsc2UsInByaWNpbmdNb2RlbCI6eyJwYXltZW50VHlwZSI6Im9uZS10aW1lIHB1cmNoYXNlIiwicHJpY2luZ01vZGVsTmFtZSI6InN0cmluZyIsImJhc2ljUHJpY2UiOjAsImN1cnJlbmN5IjoiRVVSIiwiZmVlIjowLCJoYXNQYXltZW50T25TdWJzY3JpcHRpb24iOnsicGF5bWVudE9uU3Vic2NyaXB0aW9uTmFtZSI6IiIsInBheW1lbnRUeXBlIjoiIiwidGltZUR1cmF0aW9uIjoiIiwiZGVzY3JpcHRpb24iOiIiLCJyZXBlYXQiOiIiLCJoYXNTdWJzY3JpcHRpb25QcmljZSI6MH0sImhhc0ZyZWVQcmljZSI6eyJoYXNQcmljZUZyZWUiOnRydWV9fSwiZGF0YUV4Y2hhbmdlQWdyZWVtZW50Ijp7Im9yaWciOiJ7XCJhbGdcIjpcIkVTMjU2XCIsXCJjcnZcIjpcIlAtMjU2XCIsXCJrdHlcIjpcIkVDXCIsXCJ4XCI6XCJnZHQ5ZHhkMVE5cDVmbjhQY2g4dHVNZjZoNGxaX050YmdlVkFkZFBrazVNXCIsXCJ5XCI6XCJjb0pSNS1UR0JVd0lWXzVZb3ZsV3p0NHN1VjB3bnhmdldKRHZla0pCQ3dRXCJ9IiwiZGVzdCI6IntcImFsZ1wiOlwiRVMyNTZcIixcImNydlwiOlwiUC0yNTZcIixcImt0eVwiOlwiRUNcIixcInhcIjpcIllJMjhndlYwdXRtdmpvYktuZWRfNG02M2JjMlNrSnVLeEpCbGxBTmZLVWNcIixcInlcIjpcIkpNS3pUeHhlNGpOY29aWU80RDdYZV9ublp0S2VaeTV6X0ptcWpvVXlMZjhcIn0iLCJlbmNBbGciOiJBMTI4R0NNIiwic2lnbmluZ0FsZyI6IkVTMjU2IiwiaGFzaEFsZyI6IlNIQS0yNTYiLCJsZWRnZXJDb250cmFjdEFkZHJlc3MiOiIweDhkNDA3QTE3MjI2MzNiREQxZGNmMjIxNDc0YmU3YTQ0QzA1ZDdjMkYiLCJsZWRnZXJTaWduZXJBZGRyZXNzIjoiMHhkQjBDRTY4YkFiQzE0NUIxODc4NkMyRDgyMEI4Q2NDYzQwZTFhNGY1IiwicG9vVG9Qb3JEZWxheSI6MTAwMDAwLCJwb29Ub1BvcERlbGF5IjozMDAwMCwicG9vVG9TZWNyZXREZWxheSI6MTgwMDAwfSwiaXNzIjoiZGlkOmV0aHI6aTNtOjB4MDM3ZTExMTdkODQwOTlhNTc2M2Y3NjM5NjBmOTkzOTU2ZGMxN2FhY2QyYWYwNmNkOGEyMzY1ODRhNTQ3ZWMzZmUzIiwiaWF0IjoxNjcyODMyMDk5fQ.LlUyaZZDPbzxFoX-sQvhUkLI0SGSEfuDjbi9UYEV4Q5zHOiBi9YxPCBJi8M8tAp2QD95HOZSp_zZ2B8za0RD_w"
+                  }
+                }
               }
             }
           }
